kustomize/overlays/api/vlfk-no/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fint-oneroster-rest-provider
spec:
  template:
    spec:
      containers:
        - name: fint-oneroster-rest-provider
          readinessProbe:
            httpGet:
              path: /vlfk/ims/oneroster/v1p1/actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /vlfk/ims/oneroster/v1p1/actuator/health/liveness
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 5
